fix: enable URL line breaks in Chrome

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -237,6 +237,10 @@ hr {
 a {
   color: #63c0f5;
   text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-all;
+  max-width: 100%;
 }
 
 a:active, a:focus {
